istio/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fe1-destination-rule
spec:
  host: fe1
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v0
    labels:
      version: v0
  - name: v2
    labels:
      version: v2
